# pica

./: README.md
.github/workflows/: CI-API.yaml  CI-ARCHIVER.yaml  CI-DATABASE.yaml  CI-OAUTH.yaml  CI-SEED.yaml  CI-WATCHDOG.yaml
buildkit/rules/claude/: CLAUDE.md
buildkit/rules/cursor/: buildkit.mdc
core/: Cargo.toml  Dockerfile.common  README.md  docker-compose.data.yml  docker-compose.yml
core/api/: Cargo.toml  Dockerfile  README.md
core/api/src/: main.rs  server.rs
core/api/src/domain/: config.rs  metrics.rs  mod.rs  track.rs
core/api/src/helper/: k8s_driver.rs  mod.rs  shape_mongo_filter.rs
core/api/src/logic/: common_enum.rs  common_model.rs  connection.rs  connection_definition.rs  connection_model_definition.rs  connection_model_schema.rs  connection_oauth_definition.rs  event_access.rs  event_callback.rs  events.rs  knowledge.rs  metrics.rs  mod.rs  oauth.rs  passthrough.rs  platform.rs  platform_page.rs  schema_generator.rs  secrets.rs  tasks.rs  tracker.rs  unified.rs  vault_connection.rs
core/api/src/logic/openapi/: builder.rs  mod.rs
core/api/src/middleware/: header_auth.rs  header_blocker.rs  header_passthrough.rs  jwt_auth.rs  rate_limiter.rs
core/api/src/router/: public.rs  secured_jwt.rs  secured_key.rs
core/api/tests/: checker.rs  context.rs  main.rs
core/api/tests/http/: callback.rs  crud.rs  mod.rs  pagination.rs  passthrough.rs  unified.rs
core/api/tests/resource/: osentities_domain_connection_Connection.bson  osentities_domain_connection_Connection.json  osentities_domain_connection_connection_model_definition_ConnectionModelDefinition.bson  osentities_domain_connection_connection_model_definition_ConnectionModelDefinition.json
core/api/tests/standard/: mod.rs
core/archiver/: Cargo.toml  Dockerfile  README.md
core/archiver/src/: main.rs
core/archiver/src/domain/: config.rs
core/archiver/src/event/: chosen.rs  completed.rs  dumped.rs  failed.rs  finished.rs  mod.rs  started.rs  uploaded.rs
core/archiver/src/storage/: google_cloud.rs
core/cache/: Cargo.toml
core/cache/src/: local.rs  remote.rs
core/cli/: Cargo.toml  README.md
core/cli/src/: lib.rs  main.rs
core/cli/src/algebra/: handler.rs
core/cli/src/domain/: config.rs  constant.rs  context.rs  mod.rs  steps.rs
core/cli/src/service/: command.rs  helper.rs  mod.rs  printer.rs  server.rs
core/database/: Cargo.toml  Dockerfile  README.md
core/database/src/: main.rs  server.rs
core/database/src/algebra/: init.rs  mod.rs  storage.rs
core/database/src/domain/: postgres.rs
core/database/src/logic/: connection.rs
core/database/src/router/: mod.rs
core/database/tests/: context.rs
core/database/tests/http/: connection.rs  signal.rs
core/oauth/: package.json
core/oauth/src/: index.ts
core/oauth/src/connections/airtable/: init.ts
core/oauth/src/connections/amazonAds/: init.ts  refresh.ts
core/oauth/src/connections/apollo/: init.ts  refresh.ts
core/oauth/src/connections/asana/: init.ts  refresh.ts
core/oauth/src/connections/attio/: refresh.ts
core/oauth/src/connections/calendly/: init.ts  refresh.ts
core/oauth/src/connections/contentstackContentManagement/: refresh.ts
core/oauth/src/connections/dynamicDispatch/: init.ts
core/oauth/src/connections/github/: init.ts  refresh.ts
core/oauth/src/connections/hubspot/: init.ts  refresh.ts
core/oauth/src/connections/jira/: init.ts  refresh.ts
core/oauth/src/lib/: helpers.ts
core/osentities/: Cargo.toml  README.md
core/osentities/src/algebra/: crypto.rs  hash.rs  mod.rs  oauth.rs  secret.rs  store.rs  template.rs
core/osentities/src/domain/: mod.rs
core/unified/: Cargo.toml  README.md
core/unified/src/: client.rs  lib.rs  unified.rs
core/unified/src/algebra/: jsruntime.rs
core/unified/src/domain/: mod.rs
core/watchdog/: Cargo.toml  Dockerfile  README.md
core/watchdog/src/: client.rs  config.rs  main.rs
oauth/src/connections/canva/: init.ts  refresh.ts
oauth/src/connections/contentstackContentManagement/: init.ts
oauth/src/connections/puzzleIo/: init.ts
oauth/src/connections/shipBob/: refresh.ts
oauth/src/connections/wikimedia/: refresh.ts
(+70 files in other folders)
