[package]
name = "api"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum.workspace = true
bson.workspace = true
chrono.workspace = true
convert_case.workspace = true
dotenvy.workspace = true
envconfig.workspace = true
fake.workspace = true
futures-util.workspace = true
futures.workspace = true
http-serde-ext-ios.workspace = true
http.workspace = true
hyper = "0.14.31"
indexmap = "2.6.0"
cache = { path = "../cache" }
osentities = { path = "../osentities" }
unified = { path = "../unified" }
jsonwebtoken.workspace = true
k8s-openapi = { workspace = true, features = ["latest"] }
kube = { workspace = true, features = ["runtime", "derive", "client"] }
mongodb.workspace = true
num_cpus.workspace = true
openapiv3.workspace = true
rand.workspace = true
redis.workspace = true
reqwest.workspace = true
regex = "1"
schemars.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4.13", features = ["filter"] }
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
uuid.workspace = true
validator.workspace = true
posthog-rs.workspace = true

[dev-dependencies]
testcontainers-modules = { workspace = true, features = ["mongo", "redis"] }
mockito.workspace = true
