[package]
name = "watchdog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
bson.workspace = true
chrono.workspace = true
dotenvy.workspace = true
envconfig.workspace = true
futures.workspace = true
cache = { path = "../cache" }
osentities = { path = "../osentities" }
reqwest = { workspace = true, features = ["stream"] }
serde_json.workspace = true
mongodb.workspace = true
redis.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
testcontainers-modules = { workspace = true, features = ["mongo", "redis"] }
mockito.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
